--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-runtime": "^6.26.0",
+    "express": "^4.17.1",
     "fastclick": "^1.0.6",
+    "jsonp": "0.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "better-scroll": "^0.1.15",
+    "vue-lazyload": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
