--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "better-scroll": "^0.1.15",
-    "vue-lazyload": "^1.3.3"
+    "vue-lazyload": "^1.3.3",
+    "vuex": "^3.5.1",
+    "create-keyframe-animation": "^0.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
