--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "zys <690313615@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
@@ -22,7 +22,10 @@
     "better-scroll": "^0.1.15",
     "vue-lazyload": "^1.3.3",
     "vuex": "^3.5.1",
-    "create-keyframe-animation": "^0.1.0"
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^3.6.0",
+    "lyric-parser": "^1.0.1",
+    "good-storage": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -72,7 +75,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "vconsole": "^3.3.4"
   },
   "engines": {
     "node": ">= 6.0.0",
