--- a/package.json
+++ b/package.json
@@ -5,27 +5,29 @@
   "author": "zys <690313615@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js --host 0.0.0.0",
+    "dev": "webpack-dev-server --config build/webpack.dev.conf.js --inline --progress --host 0.0.0.0",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "test": "node build/webpack.dev.conf.js"
   },
   "dependencies": {
     "axios": "^0.16.1",
     "babel-runtime": "^6.26.0",
+    "better-scroll": "^0.1.15",
+    "body-parser": "^1.19.0",
+    "create-keyframe-animation": "^0.1.0",
     "express": "^4.17.1",
     "fastclick": "^1.0.6",
-    "jsonp": "0.2.1",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "better-scroll": "^0.1.15",
-    "vue-lazyload": "^1.3.3",
-    "vuex": "^3.5.1",
-    "create-keyframe-animation": "^0.1.0",
+    "good-storage": "^1.1.1",
     "js-base64": "^3.6.0",
+    "jsonp": "0.2.1",
     "lyric-parser": "^1.0.1",
-    "good-storage": "^1.1.1"
+    "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
