--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-runtime": "^6.26.0",
     "better-scroll": "^0.1.15",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "create-keyframe-animation": "^0.1.0",
     "express": "^4.17.1",
     "fastclick": "^1.0.6",
